[gd_scene load_steps=10 format=2]

[ext_resource path="res://Screens/PrologueScreen/Textures/SPACE/rider.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Screens/PrologueScreen/Textures/SPACE/enemy.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Screens/PrologueScreen/Textures/SPACE/BG.png" type="Texture" id=3]
[ext_resource path="res://Screens/PrologueScreen/Scripts/Rider.gd" type="Script" id=4]
[ext_resource path="res://Screens/PrologueScreen/Scripts/Enemy.gd" type="Script" id=5]
[ext_resource path="res://Screens/PrologueScreen/Textures/TEXT1.png" type="Texture" id=6]
[ext_resource path="res://Screens/PrologueScreen/Scripts/MovingText.gd" type="Script" id=7]
[ext_resource path="res://Screens/PrologueScreen/Scripts/PrologueScreen.gd" type="Script" id=8]
[ext_resource path="res://Screens/PrologueScreen/Prefabs/FadeOut.tscn" type="PackedScene" id=9]

[node name="PrologueScreen" type="Node2D"]
script = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="BG" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Street" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Street"]

[node name="Enemy" type="Node2D" parent="."]
position = Vector2( 100, 20 )
script = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="Enemy"]
frames = ExtResource( 2 )
playing = true

[node name="Rider" type="Node2D" parent="."]
position = Vector2( 30, 60 )
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="Rider"]
frames = ExtResource( 1 )
playing = true

[node name="EffectRoot" type="Node2D" parent="."]

[node name="MovingText" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -25, -80 )
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="MovingText"]
texture = ExtResource( 6 )

[node name="FadeOut" parent="." instance=ExtResource( 9 )]
